--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,104 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=cyrillic-ext" rel="stylesheet">
 	<title>Professional</title>
 </head>
 <body>
 	
-	<h1>ПРИВЕТ</h1>
+	<section class="main">
+		<div class="container">
+			<header>
+				
+
+				<nav class="main-nav">
+					<div class="logo">
+						<a href="#logo"></a><img src="./img/logo.png" alt="logo">
+					</div>
+					<ul class="main-nav__ul">
+						<li class="main-nav__li"><a href="#servises">Услуги</a></li>
+						<li class="main-nav__li"><a href=" #gym">Тренажерный зал</a></li>
+						<li class="main-nav__li"><a href="#contacts">Контакты</a></li>
+						<li class="main-nav__li"><a href="#club">Вступить в клуб</a></li>
+						<li class="main-nav__li righted"><a href="#tel">8 800 655 35 35</a></li>
+					</ul>
+				</nav>
+
+				<div class="main-content">
+					<div class="main-content__left">
+						<div class="main-title">
+							Фитнес-центр
+						</div>
+						<div class="main-name">
+							Профессионал
+						</div>
+						<button class="join">Вступить в клуб</button>
+					</div>
+					<div class="main-content__right">
+							<img src="./img/woman.png" alt="women">
+					</div>
+				</div>
+
+				<div class="slider-dots">
+					<div class="dot dot-active"></div>
+					<div class="dot"></div>
+					<div class="dot"></div>
+					<div class="dot"></div>
+				</div>
+
+			</header>
+		</div>
+	</section>
+
+	<section class="services">
+		<div class="container">
+			<div class="services-wrapper">
+
+				<div class="services-left">
+					<div class="services-left__groups">
+
+						<div class="groups-title__up">Групповые</div>
+						<div class="groups-nav">
+							<ul class="groups-ul">
+								<li class="services-li"><a href="#body-pump">body pump</a></li>
+								<li class="services-li"><a href="#cxworx">cxworx</a></li>
+								<li class="services-li"><a href="#body-balance">body balance</a></li>
+								<li class="services-li"><a href="#rpm">rpm</a></li>
+							</ul>
+						</div>
+
+						<div class="gym-title__down">Зал</div>
+						<div class="gym-nav">
+							<ul class="gym-ul">
+								<li class="services-li"><a href="#trening">Персональный тренинг</a></li>
+								<li class="services-li"><a href="#power">Силовые тренажеры</a></li>
+								<li class="services-li"><a href="#kardiozone">Кардиозона</a></li>
+								<li class="services-li"><a href="#kinesis">Kinesis</a></li>
+								<li class="services-li"><a href="#flexability">Flexability</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class="services-right">
+					<div class="item">
+						<div class="item-title">ТРЕНАЖЕРНЫЙ ЗАЛ <br> 1250 КВ. М </div>
+						<div class="item-subtitle">Большие пространства, высокие потолки, <br> удобное зонирование</div>
+					</div>
+					<div class="item">
+						<div class="item-title">ТРЕНАЖЕРЫ TECHNOGYM</div>
+						<div class="item-subtitle">Золотой стандарт в мире тренажеров, комплексная <br> кардио и силовая нагрузка</div>
+					</div>
+					<div class="item">
+						<div class="item-title">ТРЕНАЖЕРЫ HOIST</div>
+						<div class="item-subtitle">Безупречная биомеханика, естественная <br> траектория и амплитуда движения</div>
+					</div>
+					<button class="join join-white">Вступить в клуб</button>
+					<button class="excursion">Экскурсия</button>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
