--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,6 @@
 	<section class="main">
 		<div class="container">
 			<header>
-				
-
 				<nav class="main-nav">
 					<div class="logo">
 						<a href="#logo"></a><img src="./img/logo.png" alt="logo">
@@ -36,7 +34,7 @@
 						<div class="main-name">
 							Профессионал
 						</div>
-						<button class="join">Вступить в клуб</button>
+						<button class="btn join">Вступить в клуб</button>
 					</div>
 					<div class="main-content__right">
 							<img src="./img/woman.png" alt="women">
@@ -97,11 +95,93 @@
 						<div class="item-title">ТРЕНАЖЕРЫ HOIST</div>
 						<div class="item-subtitle">Безупречная биомеханика, естественная <br> траектория и амплитуда движения</div>
 					</div>
-					<button class="join join-white">Вступить в клуб</button>
+					<button class="btn join join-white">Вступить в клуб</button>
 					<button class="excursion">Экскурсия</button>
 				</div>
 			</div>
 		</div>
 	</section>
+
+
+	<section class="gallery">
+		<div class="container">
+			<h1>ЗДЕСЬ БУДЕТ СЛАЙДЕР</h1>
+		</div>
+		
+	</section>
+
+
+
+
+
+
+	<section class="contacts">
+		<div class="container">
+			<div class="contacts-wrapper">
+				<div class="contacts-address">Ростов-на-Дону, <br> ул. Суворова, 130</div>
+				<div class="contacts-worktime__wrapper">
+					<div class="worktime-title">С понедельника по пятницу:</div>
+					<div class="worktime-time">6:30 — 00:30</div>
+					<div class="worktime-title swing">В выходные и праздники:</div>
+					<div class="worktime-time">8:00 — 22:00</div>
+					<button class="btn join join-white join-contacts">Вступить в клуб</button>
+				</div>
+				<div class="contacts-social__wrapper">
+					<div class="social-instagram">
+						<a href="#inst"><img src="./img/instagram.png" alt="Instagram"><span>Instagram</span></a>
+
+					</div>
+					<div class="social-map">
+						<a href="#inst"><img src="./img/map.png" alt="Map"><span>Проложить маршрут</span></a>
+
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<div class="club-form">
+				<div class="club-form__title">Хочу <br> тренироваться</div>
+				<div class="club-form__subtitle">В клубе "Профессионал"</div>
+
+				<form id="form">
+					<input required type="email" placeholder="EMAIL">
+					<input required type="text" placeholder="ИМЯ">
+					<input required type="tel" placeholder="ТЕЛЕФОН">
+					<button class="join join-form" type="submit">Вступить в клуб</button>
+				</form>	
+			<p class="info">Вся информация, размещённая на настоящем сайте, носит информационный характер и ни при каких обстоятельствах не
+				является публичной офертой, определяемой положениями статьи 437 Гражданского кодекса Российской Федерации.</p>
+			</div>
+			<div class="footer-img">
+				<img src="./img/woman2.png" alt="woman2">
+			</div>
+	
+			
+		</div>
+	</footer>
+
+
+	<div class="overlay fade">
+		<div class="popup">
+			<div class="popup-close">&times;
+			</div>
+			<div class="popup-title">
+				Заполните форму и мы с Вами свяжемся
+			</div>
+			<div class="popup-form">
+				<form id="form">
+					<input required type="email" placeholder="EMAIL">
+					<input required type="text" placeholder="ИМЯ">
+					<input required type="tel" placeholder="ТЕЛЕФОН">
+					<button class="join join-form" type="submit">Вступить в клуб</button>
+				</form>
+			</div>
+		</div>
+	</div>
+	<script src="js/script.js"></script>
 </body>
 </html>
