menu js raziebal

--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,21 @@
 </head>
 <body>
 <div id="fullpage">
-	<div class="section" id="section0">
+	<div class="section" id="section1">
 		<section class="main">
 			<div class="container">
-				<header>
-					<nav class="main-nav">
-						<div class="logo">
-							<a href="#logo"></a><img src="./img/logo.png" alt="logo">
+				<header id="logo">
+					<nav class="main-nav" id="main-nav">
+						<div class="logo logo-first">
+							<a href="#logo"></a>
 						</div>
-						<ul class="main-nav__ul" id="menu">
-							<li data-menuanchor="firstPage" class="main-nav__li"><a href="#firstPage">Услуги</a></li>
-							<li data-menuanchor="secondPage" class="main-nav__li"><a href="#secondPage">Тренажерный зал</a></li>
-							<li data-menuanchor="thirdPage" class="main-nav__li"><a href="#thirdPage">Контакты</a></li>
-							<li data-menuanchor="fourthPage" class="main-nav__li"><a href="#fourthPage">Вступить в клуб</a></li>
-							<li data-menuanchor="tel: 8 800 655 35 35" class="main-nav__li righted"><a href="tel: 8 800 655 35 35">8 800 655
+						<ul id="menu" class="main-nav__ul">
+							<li data-menuanchor="home" class="main-nav__li"><a href="#home">Главная</a></li>
+							<li data-menuanchor="services" class="main-nav__li"><a href="#services">Услуги</a></li>
+							<li data-menuanchor="gallery" class="main-nav__li"><a href="#gallery">Галерея</a></li>
+							<li data-menuanchor="contacts" class="main-nav__li"><a href="#contacts">Контакты</a></li>
+							<li data-menuanchor="inClub" class="main-nav__li"><a href="#inClub">Вступить в клуб</a></li>
+							<li class="main-nav__li righted"><a href="tel: 8 800 655 35 35">8 800 655
 									35 35</a>
 							</li>
 						</ul>
@@ -46,21 +47,37 @@
 						</div>
 					</div>
 
-					<div class="slider-dots">
+					<!-- <div class="slider-dots">
 						<div class="dot dot-active"></div>
 						<div class="dot"></div>
 						<div class="dot"></div>
 						<div class="dot"></div>
-					</div>
+					</div> -->
 
 				</header>
 			</div>
 		</section>
 	</div>
 
-	<div class="section" id="section1">
+	<div class="section" id="section2">
+		
 		<section class="services">
 			<div class="container">
+				<!-- <nav class="main-nav another">
+					<div class="logo">
+						<a href="#logo"><img src="./img/logo_orange.png" alt="logo"></a>
+					</div>
+					<ul id="menu" class="main-nav__ul">
+						<li data-menuanchor="home" class="main-nav__li"><a href="#home">Главная</a></li>
+						<li data-menuanchor="services" class="main-nav__li"><a href="#services">Услуги</a></li>
+						<li data-menuanchor="gallery" class="main-nav__li"><a href="#gallery">Галерея</a></li>
+						<li data-menuanchor="contacts" class="main-nav__li"><a href="#contacts">Контакты</a></li>
+						<li data-menuanchor="inClub" class="main-nav__li"><a href="#inClub">Вступить в клуб</a></li>
+						<li class="main-nav__li righted"><a href="tel: 8 800 655 35 35">8 800 655
+								35 35</a>
+						</li>
+					</ul>
+				</nav> -->
 				<div class="services-wrapper">
 
 					<div class="services-left">
@@ -138,10 +155,26 @@
 	</div>
 
 
-	<div class="section" id="section2">
+	<div class="section" id="section3">
+		
 		<section class="gallery">
 			<div class="container">
-				<div id="fotorama" data-width="60%" data-nav="thumbs" data-thumbwidth="120" data-transition="slide"
+				<!-- <nav class="main-nav another">
+					<div class="logo">
+						<a href="#logo"><img src="./img/logo_orange.png" alt="logo"></a>
+					</div>
+					<ul id="menu" class="main-nav__ul">
+						<li data-menuanchor="home" class="main-nav__li"><a href="#home">Главная</a></li>
+						<li data-menuanchor="services" class="main-nav__li"><a href="#services">Услуги</a></li>
+						<li data-menuanchor="gallery" class="main-nav__li"><a href="#gallery">Галерея</a></li>
+						<li data-menuanchor="contacts" class="main-nav__li"><a href="#contacts">Контакты</a></li>
+						<li data-menuanchor="inClub" class="main-nav__li"><a href="#inClub">Вступить в клуб</a></li>
+						<li class="main-nav__li righted"><a href="tel: 8 800 655 35 35">8 800 655
+								35 35</a>
+						</li>
+					</ul>
+				</nav> -->
+				<div id="fotorama" data-width="50%" data-nav="thumbs" data-thumbwidth="120" data-transition="slide"
 					data-loop="true" data-keyboard="true" data-arrows="true" data-autoplay="true" data-thumbmargin="30">
 					<img src="./img/1.jpg">
 					<img src="./img/2.jpg">
@@ -163,9 +196,27 @@
 
 
 
-	<div class="section" id="section3">
+	<div class="section" id="section4">
+		
 		<section class="contacts">
 			<div class="container">
+				
+				<!-- <nav class="main-nav another">
+					<div class="logo">
+						<a href="#logo"><img src="./img/logo_orange.png" alt="logo"></a>
+					</div>
+					<ul id="menu" class="main-nav__ul">
+						<li data-menuanchor="home" class="main-nav__li"><a href="#home">Главная</a></li>
+						<li data-menuanchor="services" class="main-nav__li"><a href="#services">Услуги</a></li>
+						<li data-menuanchor="gallery" class="main-nav__li"><a href="#gallery">Галерея</a></li>
+						<li data-menuanchor="contacts" class="main-nav__li"><a href="#contacts">Контакты</a></li>
+						<li data-menuanchor="inClub" class="main-nav__li"><a href="#inClub">Вступить в клуб</a></li>
+						<li class="main-nav__li righted"><a href="tel: 8 800 655 35 35">8 800 655
+								35 35</a>
+						</li>
+					</ul>
+				</nav> -->
+				
 				<div class="contacts-wrapper">
 					<div class="contacts-address">Ростов-на-Дону, <br> ул. Суворова, 130</div>
 					<div class="contacts-worktime__wrapper">
@@ -193,29 +244,47 @@
 	</div>
 
 
-	<div class="section" id="section4">
-		<footer>
-			<div class="container">
+	<div class="section" id="section5">
+		
+		<div class="container">
+			<footer>
+				<!-- <nav class="main-nav">
+					<div class="logo">
+						<a href="#logo"><img src="./img/logo.png" alt="logo"></a>
+					</div>
+					<ul id="menu" class="main-nav__ul">
+							<li data-menuanchor="home" class="main-nav__li"><a href="#home">Главная</a></li>
+							<li data-menuanchor="services" class="main-nav__li"><a href="#services">Услуги</a></li>
+							<li data-menuanchor="gallery" class="main-nav__li"><a href="#gallery">Галерея</a></li>
+							<li data-menuanchor="contacts" class="main-nav__li"><a href="#contacts">Контакты</a></li>
+							<li data-menuanchor="inClub" class="main-nav__li"><a href="#inClub">Вступить в клуб</a></li>
+							<li class="main-nav__li righted"><a href="tel: 8 800 655 35 35">8 800 655
+									35 35</a>
+							</li>
+						</ul>
+				</nav> -->
 				<div class="club-form">
-					<div class="club-form__title">Хочу <br> тренироваться</div>
-					<div class="club-form__subtitle">В клубе "Профессионал"</div>
+				<div class="club-form__title">Хочу <br> тренироваться</div>
+				<div class="club-form__subtitle">В клубе "Профессионал"</div>
 
-					<form id="form">
-						<input required type="email" placeholder="EMAIL">
-						<input required type="text" placeholder="ИМЯ">
-						<input required type="tel" id="phone" placeholder="ТЕЛЕФОН">
-						<button class="join join-form" type="submit">Вступить в клуб</button>
-					</form>
-					<p class="info">Вся информация, размещённая на настоящем сайте, носит информационный характер и ни при
-						каких обстоятельствах не
-						является публичной офертой, определяемой положениями статьи 437 Гражданского кодекса Российской
-						Федерации.</p>
+				<form id="form">
+					<input required type="email" placeholder="EMAIL">
+					<input required type="text" placeholder="ИМЯ">
+					<input required type="tel" id="phone" placeholder="ТЕЛЕФОН">
+					<button class="join join-form" type="submit">Вступить в клуб</button>
+				</form>
+				<p class="info">Вся информация, размещённая на настоящем сайте, носит информационный характер и ни при
+					каких обстоятельствах не
+					является публичной офертой, определяемой положениями статьи 437 Гражданского кодекса Российской
+					Федерации.</p>
 				</div>
 				<div class="footer-img">
 					<img src="./img/woman2.png" alt="woman2">
 				</div>
-			</div>
-		</footer>
+			</footer>
+			
+		</div>
+
 	</div>
 
 
